tests/paczka1/small_fuzzy/33596403.err
Error in line 10: c0fcM A247 85,0
Error in line 11: 956 A811 81,4
